--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.3",
-    "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/contracts": "5.0.2",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "lodash": "^4.17.21",
