--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "hardhat": "^2.22.2",
+    "hardhat-gas-reporter": "^2.2.0",
     "solidity-coverage": "^0.8.12"
   },
   "dependencies": {
