--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "deployLocal": "npx hardhat run --network localhost scripts/dev/deploy.ts",
     "stressTest": "npx hardhat run --network localhost scripts/dev/stressTest.ts",
     "deploy": "npx hardhat run --network dev_remote scripts/dev/deploy.ts",
+    "deploy_pulsechain_mainnet": "npx hardhat run --network pulsechain_mainnet scripts/deploy.ts",
     "deploy_pulsechain_testnet": "npx hardhat run --network pulsechain_testnet scripts/deploy.ts",
     "deploy_TimeLock_pulsechain_testnet": "npx hardhat run --network pulsechain_testnet scripts/deployTimeLock.ts",
+    "deploy_TimeLock_pulsechain_mainnet": "npx hardhat run --network pulsechain_mainnet scripts/deployTimeLock.ts",
     "setup": "npx hardhat run --network dev_remote scripts/dev/setup.ts",
     "coverage": "npx hardhat coverage"
   },
