--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "hardhat": "^2.22.2",
-    "hardhat-gas-reporter": "^2.2.0",
     "solidity-coverage": "^0.8.12"
   },
   "dependencies": {
     "@apollo/client": "^3.10.3",
+    "@nomicfoundation/hardhat-verify": "^2.0.11",
     "@openzeppelin/contracts": "5.0.2",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
